# Flamappai

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/flamapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/flamapp/: FrameProcessor.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/flamapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
web/: bundle.js  index.html  tsconfig.json  viewer.js  viewer.ts
